<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    >
    <group android:checkableBehavior="single">
    <item android:id="@+id/home1" android:title="@string/home" android:icon="@drawable/home_icon"></item>
    <item android:id="@+id/add_book" android:title="@string/add_new_book" android:icon="@drawable/book_icon"></item>
</group>
 <item android:title="Profile" >
        <menu>
            <group android:checkableBehavior="single" >
            <item android:id="@+id/logout" android:title="@string/logout" android:icon="@drawable/logout_ico"></item>
            <item android:id="@+id/Account" android:title="@string/Account" android:icon="@drawable/account_icon"></item>
            </group>
        </menu>
 </item>
    <item  android:title="Comunacation " >
        <menu>
            <group android:checkableBehavior="single">
            <item android:id="@+id/share" android:title="@string/shre" android:icon="@drawable/share_icon"></item>
            <item android:id="@+id/about" android:title="@string/about" android:icon="@drawable/about_icon"></item>
            <item android:id="@+id/rate" android:title="@string/rate" android:icon="@drawable/rate_icon"></item>
            </group>
        </menu>
    </item>
</menu>